fix: use absolute paths for SQLite DB in CI workflows
Next.js runtime resolves relative paths from a different cwd,
causing 'Unable to open database file'. Use absolute $GITHUB_WORKSPACE paths.

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   E2E_MERCURE_JWT_SECRET: e2e-mercure-secret
-  DATABASE_URL: file:./prisma/e2e-test.db
+  DATABASE_URL: file:${{ github.workspace }}/prisma/e2e-test.db
 
 jobs:
   e2e:
