--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   # ── Key Generation (runs once on first startup) ──
   guard-keygen:
     build: ./guard
+    user: "0:0"
     entrypoint: ["sh", "-c", "
       if [ ! -f /keys/.guard-keys-generated ]; then
         node -e \"
@@ -20,6 +21,19 @@ services:
     "]
     volumes:
       - guard-keys:/keys
+
+  db-migrate:
+    build:
+      context: .
+      target: deps
+    entrypoint: ["sh", "-c", "npx prisma db push --skip-generate --accept-data-loss"]
+    environment:
+      DATABASE_URL: postgresql://heysummon:${DB_PASSWORD:-heysummon_dev}@db:5432/heysummon
+    networks:
+      - backend
+    depends_on:
+      db:
+        condition: service_healthy
 
   db:
     image: postgres:16-alpine
@@ -44,13 +58,13 @@ services:
     networks:
       - backend
     environment:
-      SERVER_NAME: ':3000'
+      SERVER_NAME: ':3446'
       MERCURE_PUBLISHER_JWT_KEY: ${MERCURE_JWT_SECRET:?Set MERCURE_JWT_SECRET}
       MERCURE_SUBSCRIBER_JWT_KEY: ${MERCURE_JWT_SECRET}
       MERCURE_EXTRA_DIRECTIVES: |
         cors_origins ${MERCURE_CORS_ORIGINS:-https://cloud.heysummon.ai}
     healthcheck:
-      test: ["CMD", "wget", "-q", "--spider", "http://localhost:3000/healthz"]
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:3446/healthz"]
       interval: 5s
       timeout: 3s
       retries: 5
@@ -65,7 +79,7 @@ services:
     security_opt:
       - no-new-privileges:true
     ports:
-      - "${GUARD_PORT:-3000}:3000"
+      - "${GUARD_PORT:-3445}:3000"
     networks:
       - frontend
       - backend
@@ -100,17 +114,20 @@ services:
     depends_on:
       guard-keygen:
         condition: service_completed_successfully
+      db-migrate:
+        condition: service_completed_successfully
       db:
         condition: service_healthy
       mercure:
         condition: service_healthy
     environment:
       DATABASE_URL: postgresql://heysummon:${DB_PASSWORD:-heysummon_dev}@db:5432/heysummon
-      NEXTAUTH_URL: ${NEXTAUTH_URL:-http://localhost:3000}
+      NEXTAUTH_URL: ${NEXTAUTH_URL:-http://localhost:3445}
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET:?Set NEXTAUTH_SECRET}
+      AUTH_TRUST_HOST: "true"
       AUTH_GITHUB_ID: ${AUTH_GITHUB_ID:-}
       AUTH_GITHUB_SECRET: ${AUTH_GITHUB_SECRET:-}
-      MERCURE_HUB_URL: http://mercure:3000/.well-known/mercure
+      MERCURE_HUB_URL: http://mercure:3446/.well-known/mercure
       MERCURE_JWT_SECRET: ${MERCURE_JWT_SECRET}
       GUARD_PUBLIC_KEY_FILE: /keys/guard-public-key
       REQUIRE_GUARD: "true"
@@ -122,7 +139,7 @@ services:
     volumes:
       - guard-keys:/keys:ro
     healthcheck:
-      test: ["CMD", "wget", "-q", "--spider", "http://localhost:3000/api/health"]
+      test: ["CMD", "wget", "-q", "--spider", "http://127.0.0.1:3000/api/health"]
       interval: 10s
       timeout: 5s
       retries: 3
@@ -141,7 +158,7 @@ services:
       heysummon-guard:
         condition: service_healthy
     environment:
-      TUNNEL_TOKEN: ${CLOUDFLARE_TUNNEL_TOKEN:?Set CLOUDFLARE_TUNNEL_TOKEN}
+      TUNNEL_TOKEN: ${CLOUDFLARE_TUNNEL_TOKEN:-}
     healthcheck:
       test: ["CMD", "cloudflared", "tunnel", "info"]
       interval: 30s
@@ -161,7 +178,7 @@ services:
       heysummon-guard:
         condition: service_healthy
     environment:
-      TS_AUTHKEY: ${TAILSCALE_AUTHKEY:?Set TAILSCALE_AUTHKEY}
+      TS_AUTHKEY: ${TAILSCALE_AUTHKEY:-}
       TS_STATE_DIR: /var/lib/tailscale
       TS_EXTRA_ARGS: --advertise-tags=tag:heysummon
       TS_SERVE_CONFIG: /config/serve.json
@@ -192,7 +209,7 @@ services:
       heysummon-guard:
         condition: service_healthy
     environment:
-      NGROK_AUTHTOKEN: ${NGROK_AUTHTOKEN:?Set NGROK_AUTHTOKEN}
+      NGROK_AUTHTOKEN: ${NGROK_AUTHTOKEN:-}
     ports:
       - "4040:4040"
     healthcheck:
@@ -201,6 +218,24 @@ services:
       timeout: 5s
       retries: 3
       start_period: 10s
+
+  # Prisma Studio: docker compose --profile debug up -d
+  prisma-studio:
+    build:
+      context: .
+      target: deps
+    restart: unless-stopped
+    profiles: ["debug"]
+    entrypoint: ["sh", "-c", "npx prisma studio --port 3447 --browser none"]
+    ports:
+      - "${PRISMA_STUDIO_PORT:-3447}:5555"
+    networks:
+      - backend
+    environment:
+      DATABASE_URL: postgresql://heysummon:${DB_PASSWORD:-heysummon_dev}@db:5432/heysummon
+    depends_on:
+      db:
+        condition: service_healthy
 
 networks:
   frontend:
@@ -212,4 +247,5 @@ networks:
 volumes:
   pgdata:
   guard-keys:
+  heysummon-data:
   tailscale-state:
