feat: single-admin registration — only first user can sign up
- Register API blocks new accounts when users exist (unless ALLOW_REGISTRATION=true)
- First user gets role 'admin' + auto-completed onboarding
- /api/auth/flags returns registrationOpen field
- Login page hides 'Sign up' link when registration is closed
- Documented ALLOW_REGISTRATION in .env.example

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,9 @@ MERCURE_JWT_SECRET=
 # ─── Auth Methods ───────────────────────────────────────
 # Toggle login methods (form login works out of the box, no external services)
 ENABLE_FORM_LOGIN=true
+
+# Allow multiple users to register (default: false — only first user can sign up)
+# ALLOW_REGISTRATION=true
 ENABLE_MAGIC_LINK_LOGIN=false
 ENABLE_GOOGLE_LOGIN=false
 ENABLE_GITHUB_LOGIN=false
