--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -11,6 +11,9 @@ concurrency:
 permissions:
   contents: read
 
+env:
+  DATABASE_URL: file:${{ github.workspace }}/prisma/test.db
+
 jobs:
   playwright:
     runs-on: ubuntu-latest
@@ -21,6 +24,7 @@ jobs:
       NEXTAUTH_SECRET: playwright-test-secret
       NEXTAUTH_URL: http://localhost:3456
       AUTH_TRUST_HOST: "true"
+      MERCURE_JWT_SECRET: playwright-test-secret
 
     steps:
       - uses: actions/checkout@v4
@@ -34,38 +38,25 @@ jobs:
 
       - name: Generate Prisma client
         run: npx prisma generate
-        env:
-          DATABASE_URL: "file:./prisma/test.db"
 
       - name: Create and seed database
         run: |
-          mkdir -p prisma
           npx prisma db push --force-reset
           npx prisma db seed
           echo "✅ DB seeded"
-          if [ -f ./prisma/test.db ]; then
-            ls -lh ./prisma/test.db
-          else
-            echo "⚠️ DB file not found at expected location"
-            find . -name "test.db" -type f
-          fi
-        env:
-          DATABASE_URL: "file:./prisma/test.db"
+          ls -lh prisma/test.db
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps chromium
 
       - name: Build app
         run: npm run build
-        env:
-          DATABASE_URL: "file:${{ github.workspace }}/prisma/test.db"
 
       - name: Start server and verify
         run: |
-          echo "DATABASE_URL=\"file:$PWD/prisma/test.db\"" > .env
-          npx next start -p 3456 &
+          npm start &
           for i in $(seq 1 30); do
-            if curl -s http://localhost:3456 > /dev/null 2>&1; then
+            if curl -s http://localhost:3456/api/health > /dev/null 2>&1; then
               echo "✅ Server is up"
               break
             fi
@@ -74,11 +65,12 @@ jobs:
           done
           echo "=== Auth flags ==="
           curl -s http://localhost:3456/api/auth/flags | jq .
+        env:
+          PORT: 3456
 
       - name: Run Playwright tests
         run: npx playwright test tests/e2e/dashboard-walkthrough.spec.ts --reporter=list --timeout=30000
         env:
-          DATABASE_URL: "file:${{ github.workspace }}/prisma/test.db"
           BASE_URL: http://localhost:3456
           CI: true
           DEBUG: pw:api
