--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Start server and verify
         run: |
-          npm start &
+          node .next/standalone/server.js &
           for i in $(seq 1 30); do
             if curl -s http://localhost:3456/api/health > /dev/null 2>&1; then
               echo "✅ Server is up"
@@ -67,6 +67,7 @@ jobs:
           curl -s http://localhost:3456/api/auth/flags | jq .
         env:
           PORT: 3456
+          HOSTNAME: "0.0.0.0"
 
       - name: Run Playwright tests
         run: npx playwright test tests/e2e/dashboard-walkthrough.spec.ts --reporter=list --timeout=30000
