feat: build & push guard + app images to GHCR, add docker-compose.prod.yml

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,4 @@
-name: Build & Push Docker Image
+name: Build & Push Docker Images
 
 on:
   push:
@@ -12,7 +12,8 @@ concurrency:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_APP: ghcr.io/${{ github.repository }}
+  IMAGE_GUARD: ghcr.io/${{ github.repository }}-guard
 
 jobs:
   build-and-push:
@@ -38,23 +39,48 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata
-        id: meta
+      # ── App image metadata ──
+      - name: Extract metadata (app)
+        id: meta-app
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.IMAGE_APP }}
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=raw,value=latest
 
-      - name: Build and push
+      # ── Guard image metadata ──
+      - name: Extract metadata (guard)
+        id: meta-guard
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.IMAGE_GUARD }}
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=raw,value=latest
+
+      # ── Build & push main app ──
+      - name: Build and push app
         uses: docker/build-push-action@v5
         with:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          tags: ${{ steps.meta-app.outputs.tags }}
+          labels: ${{ steps.meta-app.outputs.labels }}
+          cache-from: type=gha,scope=app
+          cache-to: type=gha,mode=max,scope=app
+
+      # ── Build & push guard ──
+      - name: Build and push guard
+        uses: docker/build-push-action@v5
+        with:
+          context: ./guard
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ steps.meta-guard.outputs.tags }}
+          labels: ${{ steps.meta-guard.outputs.labels }}
+          cache-from: type=gha,scope=guard
+          cache-to: type=gha,mode=max,scope=guard
