--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Create tarball
         run: |
           VERSION=${GITHUB_REF#refs/tags/v}
-          tar -czf heysummon-${VERSION}.tar.gz \
+          tar -czf ../heysummon-${VERSION}.tar.gz \
             --exclude='node_modules' \
             --exclude='.git' \
             --exclude='tests' \
@@ -44,6 +44,7 @@ jobs:
             --exclude='docs' \
             --exclude='CLAUDE.md' \
             -C . .
+          mv ../heysummon-${VERSION}.tar.gz .
 
       # GitHub Release
       - name: Create GitHub Release
