feat: data retention — auto-cleanup job, admin API, dashboard UI

--- a/.env.example
+++ b/.env.example
@@ -82,3 +82,7 @@ CONNECTIVITY_METHOD=direct
 
 # Edition: "community" (default, self-hosted) or "cloud" (managed, requires cloud license)
 HEYSUMMON_EDITION=community
+
+# Data retention — auto-delete expired/closed requests and audit logs older than X days
+# Default: not set = unlimited (nothing is deleted automatically)
+# HEYSUMMON_RETENTION_DAYS=90
