feat: update environment configuration for data retention and enhance client IP display

--- a/.env.example
+++ b/.env.example
@@ -86,3 +86,8 @@ HEYSUMMON_EDITION=community
 # Data retention — auto-delete expired/closed requests and audit logs older than X days
 # Default: not set = unlimited (nothing is deleted automatically)
 # HEYSUMMON_RETENTION_DAYS=90
+
+
+# Port and URL settings for development (override in production .env).
+# If using Docker and not the development version, then default port would be 3445
+PORT=3443
