feat: apply networking port strategy across project
- Local dev: Guard 3425, Mercure 3426, Prisma Studio 3427
- CLI: Guard 3435, Mercure 3436, Prisma Studio 3437
- Docker: Guard 3445 ✅, Mercure 3446 ✅, Prisma 3447 ✅, Ngrok dashboard 3448
- CLI now starts Mercure alongside the app (finds binary in ~/bin or PATH)
- Added mercurePort to HeysummonConfig + init prompt
- Updated all hardcoded 3000/3100/3442 references in code, docs, scripts
- Added Default Ports table to README

--- a/.env.example
+++ b/.env.example
@@ -36,7 +36,7 @@ GOOGLE_SECRET=
 # LOOPS_MAGIC_LINK_ID=
 
 # ─── URLs ───────────────────────────────────────────────
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=http://localhost:3425
 
 # Public URL of this instance (used by health check and API responses)
 # Set this to your tunnel URL (e.g. https://heysummon.example.com)
@@ -44,7 +44,7 @@ HEYSUMMON_PUBLIC_URL=http://localhost:3000
 
 # Internal Mercure URL (platform → Mercure, never exposed externally)
 # Only change if not using Docker Compose
-MERCURE_HUB_URL=http://localhost:3100/.well-known/mercure
+MERCURE_HUB_URL=http://localhost:3426/.well-known/mercure
 
 # ─── Mercure Security ──────────────────────────────────
 # Allowed CORS origins for Mercure (comma-separated in some setups)
@@ -52,7 +52,7 @@ MERCURE_CORS_ORIGINS=https://cloud.heysummon.ai
 
 # ─── Docker ─────────────────────────────────────────────
 # DB_PASSWORD=       # PostgreSQL password (default: heysummon_dev)
-# GUARD_PORT=3000    # Host port for the Guard reverse proxy (single entry point)
+# GUARD_PORT=3425  # Local dev default (3435 for CLI, 3445 for Docker)
 
 # ─── Content Safety Guard (Ed25519 Signing) ─────────────
 # Generate with: npx tsx scripts/generate-guard-keys.ts
@@ -87,7 +87,6 @@ HEYSUMMON_EDITION=community
 # Default: not set = unlimited (nothing is deleted automatically)
 # HEYSUMMON_RETENTION_DAYS=90
 
-
 # Port and URL settings for development (override in production .env).
 # If using Docker and not the development version, then default port would be 3445
-PORT=3443
+PORT=3425
