--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0-alpha.1",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3442",
+    "dev": "next dev --port 3425",
+    "dev:mercure": "bash start-mercure.sh",
+    "dev:all": "concurrently --names \"next,mercure\" --prefix-colors \"cyan,magenta\" \"npm run dev\" \"npm run dev:mercure\"",
+    "dev:all:debug": "concurrently --names \"next,mercure\" --prefix-colors \"cyan,magenta\" \"node --inspect=0.0.0.0:9229 node_modules/.bin/next dev --port 3425\" \"npm run dev:mercure\"",
+    "db:studio": "prisma studio",
     "build": "prisma generate && next build",
     "postinstall": "prisma generate",
     "start": "next start",
@@ -47,6 +51,7 @@
     "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.56.0",
     "@typescript-eslint/parser": "^8.56.0",
+    "concurrently": "^9.2.1",
     "eslint": "^9",
     "eslint-config-next": "^16.1.6",
     "eslint-plugin-react": "^7.37.5",
