fix: bypass rate limiting in E2E tests via secret header
- Add E2E_RATE_LIMIT_BYPASS_SECRET env var to proxy.ts
- When x-e2e-bypass header matches secret, skip rate limiting
- Add E2E_BYPASS_ARGS helper in lib.sh for all curl calls
- Update all e2e/tests/*.sh curl calls with bypass header
- Set secret in e2e.yml workflow (Start platform + Run E2E tests steps)

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -100,6 +100,7 @@ jobs:
           PORT: 3000
           REQUIRE_GUARD: "true"
           GUARD_PUBLIC_KEY: ${{ steps.guard-keys.outputs.public_key }}
+          E2E_RATE_LIMIT_BYPASS_SECRET: e2e-bypass-secret-do-not-use-in-prod
 
       - name: Start guard
         run: |
@@ -128,4 +129,5 @@ jobs:
           export GUARD_URL=http://localhost:3457
           export GUARD_SIGNING_KEY=${{ steps.guard-keys.outputs.signing_key }}
           export E2E_MERCURE_HUB=http://localhost:13100/.well-known/mercure
+          export E2E_RATE_LIMIT_BYPASS_SECRET=e2e-bypass-secret-do-not-use-in-prod
           bash e2e/e2e-test.sh
