fix: pass NEXTAUTH_SECRET to seed step (HMAC device token hash)

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -75,6 +75,8 @@ jobs:
           SEED_OUTPUT=$(bash e2e/seed-e2e.sh 2>/dev/null)
           echo "seed_json=$SEED_OUTPUT" >> "$GITHUB_OUTPUT"
           echo "$SEED_OUTPUT" | jq .
+        env:
+          NEXTAUTH_SECRET: e2e-secret
 
       - name: Build platform
         run: npm run build
