Refactor code structure for improved readability and maintainability

--- a/.env.example
+++ b/.env.example
@@ -80,7 +80,7 @@ CONNECTIVITY_METHOD=direct
 # NGROK_AUTHTOKEN=
 # NGROK_DOMAIN=            # Optional custom domain (paid plans)
 
-# Edition: "community" (default, self-hosted) or "cloud" (managed, requires cloud license)
+# Edition: "community" (default, self-hosted) or "cloud" (managed) 
 HEYSUMMON_EDITION=community
 
 # Data retention — auto-delete expired/closed requests and audit logs older than X days
