feat: update API endpoints to include versioning and add new health check routes
- Changed health check endpoints from `/api/health` to `/api/v1/health` in various workflow files, scripts, and health check implementations.
- Added new API routes for health checks and key management under the `/api/v1/keys` path.
- Updated frontend components to use the new versioned API endpoints for keys and requests.
- Implemented new request handling for rotating and managing API keys with appropriate authentication checks.

--- a/.github/workflows/zap-security.yml
+++ b/.github/workflows/zap-security.yml
@@ -110,7 +110,7 @@ jobs:
         run: |
           npm start &
           for i in $(seq 1 30); do
-            curl -sf http://localhost:${{ env.APP_PORT }}/api/health && break || sleep 2
+            curl -sf http://localhost:${{ env.APP_PORT }}/api/v1/health && break || sleep 2
           done
         env:
           NEXTAUTH_URL: http://localhost:${{ env.APP_PORT }}
