--- a/.github/workflows/disabled/playwright.yml
+++ b/.github/workflows/disabled/playwright.yml
@@ -56,7 +56,7 @@ jobs:
         run: |
           node .next/standalone/server.js &
           for i in $(seq 1 30); do
-            if curl -s http://localhost:3456/api/health > /dev/null 2>&1; then
+            if curl -s http://localhost:3456/api/v1/health > /dev/null 2>&1; then
               echo "✅ Server is up"
               break
             fi
