fix: use prisma migrate deploy instead of db push in Docker
db push --accept-data-loss can fail on fresh installs with migration history.
prisma migrate deploy is the correct command for production — applies all
pending migrations cleanly without data loss risk.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
 
   db-migrate:
     image: ghcr.io/thomasansems/heysummon:${HEYSUMMON_VERSION:-latest}
-    entrypoint: ["sh", "-c", "npx prisma db push --skip-generate --accept-data-loss"]
+    entrypoint: ["sh", "-c", "npx prisma migrate deploy"]
     environment:
       DATABASE_URL: postgresql://heysummon:${DB_PASSWORD:-heysummon_dev}@db:5432/heysummon
     networks:
