fix: update healthcheck URLs to use 127.0.0.1 and adjust .dockerignore for node_modules

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -77,7 +77,7 @@ services:
       MERCURE_EXTRA_DIRECTIVES: |
         cors_origins ${MERCURE_CORS_ORIGINS:-https://cloud.heysummon.ai}
     healthcheck:
-      test: ["CMD", "wget", "-q", "--spider", "http://localhost:3446/healthz"]
+      test: ["CMD", "wget", "-q", "--spider", "http://127.0.0.1:3446/healthz"]
       interval: 5s
       timeout: 3s
       retries: 5
@@ -112,12 +112,10 @@ services:
     volumes:
       - guard-keys:/keys:ro
     healthcheck:
-      test: ["CMD", "wget", "-q", "--spider", "http://localhost:3000/health"]
+      test: ["CMD", "wget", "-q", "--spider", "http://127.0.0.1:3000/health"]
       interval: 5s
       timeout: 3s
       retries: 5
-
-  # ── Platform: Internal only (no exposed ports) ──
   app:
     build: .
     restart: unless-stopped
@@ -226,7 +224,7 @@ services:
     ports:
       - "3448:4040"
     healthcheck:
-      test: ["CMD", "wget", "-q", "--spider", "http://localhost:3448/status"]
+      test: ["CMD", "wget", "-q", "--spider", "http://127.0.0.1:3448/status"]
       interval: 15s
       timeout: 5s
       retries: 3
