chore: remove Tailscale from Docker Compose files (#137)
- Removed tailscale service from docker-compose.dev.yml
- Removed tailscale service from docker-compose.prod.yml
- Removed tailscale-state volume from both files
- Removed TAILSCALE_AUTHKEY from .env.example
- Removed --profile tailscale references from comments

--- a/.env.example
+++ b/.env.example
@@ -66,15 +66,13 @@ GUARD_PUBLIC_KEY=
 REQUIRE_GUARD=true
 
 # ─── Connectivity ─────────────────────────────────────
-# Method: cloudflare, tailscale, ngrok, or direct (default)
+# Method: cloudflare, ngrok, or direct (default)
 # Use Docker Compose profiles: docker compose --profile cloudflare up -d
 CONNECTIVITY_METHOD=direct
 
 # Cloudflare Tunnel (--profile cloudflare)
 # CLOUDFLARE_TUNNEL_TOKEN=
 
-# Tailscale Funnel (--profile tailscale)
-# TAILSCALE_AUTHKEY=
 
 # Ngrok (--profile ngrok)
 # NGROK_AUTHTOKEN=
